[package]
name = "prime-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { features = ["derive"], version = "4" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bufstream = "0.1"
primes = "0.3"
